<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TwitterZeynep</string>
    <string name="login_label">Log in</string>
    <string name="intent_scheme">oauth</string>
    <string name="intent_host">cprest</string>
    <string name="tweet">Tweet</string>
    <string name="type_something">Type something</string>
    <string name="what_s_happening">What\'s happening?</string>
    <string name="date">date</string>
    <string name="textview">TextView</string>
    <string name="count">Count</string>
    <string name="_280">280</string>
    <string name="compose">Compose</string>
    <string name="userid">userid</string>
    <string name="username">username</string>
    <string name="loading">Loading...</string>
    <string name="myreply">myreply</string>
    <string name="todo">todo</string>

</resources>