<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toStartOf="@+id/tvUserName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvUserName"
        app:srcCompat="@android:color/black" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/textview"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvUserId"
        app:layout_constraintStart_toEndOf="@+id/ivProfileImage"
        app:layout_constraintTop_toTopOf="@+id/tvUserId" />

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="8dp"
        android:text="@string/textview"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/ivRetweetButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ivProfileImage"
        app:layout_constraintTop_toBottomOf="@+id/tvUserName" />

    <TextView
        android:id="@+id/tvTimeStamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/date"
        app:layout_constraintBottom_toTopOf="@+id/tvBody"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvUserId"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivLikeButton"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:contentDescription="@string/todo"
        android:focusable="true"
        android:tint="@color/twitter_blue"
        app:layout_constraintBottom_toTopOf="@+id/ivTweetImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivRetweetButton"
        app:layout_constraintTop_toBottomOf="@+id/tvBody"
        app:srcCompat="@drawable/ic_vector_heart_stroke" />

    <ImageView
        android:id="@+id/ivRetweetButton"
        android:layout_width="31dp"
        android:layout_height="22dp"
        android:layout_gravity="center"
        android:contentDescription="@string/todo"
        android:tint="@color/twitter_blue"
        app:layout_constraintBottom_toTopOf="@+id/ivTweetImage"
        app:layout_constraintEnd_toStartOf="@+id/ivLikeButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivReplyButton"
        app:layout_constraintTop_toBottomOf="@+id/tvBody"
        app:srcCompat="@drawable/ic_vector_retweet_stroke" />

    <ImageView
        android:id="@+id/ivReplyButton"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/myreply"
        android:focusable="true"
        android:tint="@color/twitter_blue"
        app:layout_constraintBottom_toTopOf="@+id/ivTweetImage"
        app:layout_constraintEnd_toStartOf="@+id/ivRetweetButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBody"
        app:srcCompat="@drawable/ic_vector_reply2" />

    <View
        android:id="@+id/HorizontalDivider"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivRetweetButton"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvUserId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/userid"
        app:layout_constraintEnd_toStartOf="@+id/tvTimeStamp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvUserName"
        app:layout_constraintTop_toTopOf="@+id/tvTimeStamp" />

    <ImageView
        android:id="@+id/ivTweetImage"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/HorizontalDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivRetweetButton"
        app:srcCompat="@color/black" />


</android.support.constraint.ConstraintLayout>